# NLI-CMBS

./: README.md
nli-cmbs/: .dockerignore  .env.example  .gitignore  =0.40.0  BLOCKERS.md  CLAUDE.md  Dockerfile  FRONTEND_TASK.md  README.md  ai-report-blurb.sh  alembic.ini  backfill-historical.sh  classify_properties.py  classify_properties_v2.py  docker-compose.yml  missing_property_types.csv  missing_type_classifications.txt  missing_type_names.txt  nli-cmbs-day2.sh  pyproject.toml  researched_property_types.txt
nli-cmbs/.claude/: ralph-loop.local.md
nli-cmbs/alembic/: env.py
nli-cmbs/alembic/versions/: 0073a4de655f_fix_occupancy_column_precision.py  0824c9c48edc_add_property_borrower_fields_and_.py  3b5c128f09fd_add_credit_metrics_and_loan_flags.py  55bd7649b515_add_unique_constraints_for_loans_and_.py  7b5125a8d967_initial_tables.py  add_properties_table.py  (+12 more)
nli-cmbs/docs/: REPORT_QUALITY_CHECKLIST.md  SAMPLE_REPORT.md  batch_test_results.md  coverage_test_20260312_0447.md  coverage_test_20260312_0450.md  ex102_xml_structure.md  parser_validation.md
nli-cmbs/frontend/: package-lock.json  package.json
nli-cmbs/nli_cmbs/: cli.py  config.py  main.py
nli-cmbs/reports/: BANK5_2024-5YR11.md  BBCMS_2024-5C31.md  WFCM_2024-5C2.md
nli-cmbs/scripts/: download_ex102_samples.py  fix_na_and_ab_notes.py  inspect_xml.py  weekly_news_cron.sh
nli-cmbs/tests/: conftest.py  test_ai_client.py  test_cik_resolver.py  test_edgar_client.py  test_filing_fetcher.py  test_ingest_service.py  test_integration.py  test_prompts.py  test_report_service.py  test_xml_parser.py
(+70 files in other folders)
